--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -84,10 +84,10 @@ body {
   width: 65px;
   margin-top: 30px;
 }
-.modalLogin form {
+.userArea {
   margin-top: 50px;
 }
-.modalLogin input {
+.userArea input {
   font-family: "El Messiri", sans-serif;
   color: #282f44;
   width: 65%;
@@ -97,7 +97,7 @@ body {
   border: 1px solid #f5d061;
   border-radius: 5px;
 }
-.modalLogin button {
+.userArea button {
   font-family: "Orbitron", sans-serif;
   color: #f5d061;
   width: 150px;
@@ -107,18 +107,18 @@ body {
   border-radius: 20px;
   cursor: pointer;
 }
-.modalLogin button:hover {
+.userArea button:hover {
   background-color: #f5d061;
   color: #282f44;
   border: 1px solid #282f44;
 }
-.modalLogin a {
+.userArea a {
   display: block;
   margin-top: 25px;
   text-decoration: none;
   color: #282f44;
 }
-.modalLogin a:hover {
+.userArea a:hover {
   text-shadow: 1px 1px #f5d061;
 }
 .close {
