--- a/CSS/index.css
+++ b/CSS/index.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #282f44;
+  color: #e6af2e;
 }
 .body {
   height: 100vh;
@@ -10,31 +11,112 @@ body {
   overflow: auto;
 }
 .mainCont {
-  display: flex;
   height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
   overflow: auto;
 }
 .logo {
+  height: 525px;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
   display: flex;
+  align-items: center;
 }
-.login {
+.logo img {
+  width: 350px;
+  height: 500px;
+}
+.flowCont {
   display: flex;
   flex-direction: column;
+  align-items: center;
   background-color: #ececec;
-  padding: 10px 25px 25px 25px;
-  border-radius: 15px;
+  border-radius: 5px;
+  max-width: 525px;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  animation: fadeInAnimation ease 5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
-.login input {
+.homeTxt h1 {
+  font-family: "Orbitron", sans-serif;
+}
+.homeTxt h3 {
+  text-align: center;
+}
+.buttCont {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.brewFo {
+  margin-bottom: 20px;
+}
+.buttCont button {
+  font-family: "Orbitron", sans-serif;
+  font-size: 22px;
+  color: #282f44;
+  width: 175px;
+  height: 40px;
+  margin: 10px;
+  background-color: #f5d061;
+  border: 1px solid #ececec;
+  border-radius: 20px;
+  cursor: pointer;
+}
+.buttCont button:hover {
+  background-color: #ececec;
+  color: #f5d061;
+  border: 1px solid #e6af2e;
+}
+.modalBG {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  display: none;
+}
+.modalLogin {
+  width: 300px;
+  height: 400px;
+  background-color: #ececec;
+  border: 2px solid #f5d061;
+  border-radius: 10px;
+  text-align: center;
+  position: relative;
+  animation-name: modalShow;
+  animation-duration: 2s;
+}
+.modalLogin img {
+  margin-top: 30px;
+}
+.userArea {
+  margin-top: 20px;
+}
+.userArea input {
   font-family: "El Messiri", sans-serif;
   color: #282f44;
+  width: 65%;
   height: 30px;
-  margin-top: 10px;
-  margin-bottom: 10px;
   display: block;
+  margin: 25px auto;
   border: 1px solid #f5d061;
   border-radius: 5px;
 }
-.login button {
+.userArea button {
   font-family: "Orbitron", sans-serif;
   color: #f5d061;
   width: 150px;
@@ -44,14 +126,40 @@ body {
   border-radius: 20px;
   cursor: pointer;
 }
-.login button:hover {
+.userArea button:hover {
   background-color: #f5d061;
   color: #282f44;
   border: 1px solid #282f44;
 }
-.register {
+.userArea a {
+  display: block;
+  margin-top: 25px;
+  text-decoration: none;
+  color: #282f44;
 }
-.brewFo {
+.userArea a:hover {
+  text-shadow: 1px 1px #f5d061;
 }
-.pourLog {
+.close {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  font-size: 30px;
+  cursor: pointer;
+}
+@keyframes fadeInAnimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@media (max-width: 380px) {
+  .logo {
+    height: 520px;
+  }
+  .logo img {
+    width: 315px;
+  }
 }
