Css cleanup, user page update

--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "El Messiri", sans-serif;
+  font-family: "Raleway", sans-serif;
   margin: 0;
   padding: 0;
   background-color: #ececec;
@@ -83,7 +83,7 @@ body {
   margin-top: 20px;
 }
 .userArea input {
-  font-family: "El Messiri", sans-serif;
+  font-family: "Raleway", sans-serif;
   color: #282f44;
   width: 65%;
   height: 30px;
