--- a/CSS/pourLog.css
+++ b/CSS/pourLog.css
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   background-color: #ececec;
   width: 100%;
 }
@@ -17,4 +18,18 @@
   text-align: center;
   font-family: "Orbitron", sans-serif;
   color: #e6af2e;
+}
+.breweryCont {
+  display: flex;
+  flex-direction: column;
+}
+.brewUser {
+  display: flex;
+}
+.beerCont {
+  display: flex;
+  flex-direction: column;
+}
+.userBeer {
+  display: flex;
 }
