--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,9 +1,8 @@
 body {
-  font-family: "El Messiri", sans-serif;
+  font-family: "Raleway", sans-serif;
   margin: 0;
   padding: 0;
   background-color: #282f44;
-  color: #e6af2e;
 }
 .body {
   height: 100vh;
@@ -48,9 +47,11 @@ body {
 }
 .homeTxt h1 {
   font-family: "Orbitron", sans-serif;
+  color: #e6af2e;
 }
 .homeTxt h3 {
   text-align: center;
+  color: #282f44;
 }
 .buttCont {
   display: flex;
@@ -107,7 +108,7 @@ body {
   margin-top: 20px;
 }
 .userArea input {
-  font-family: "El Messiri", sans-serif;
+  font-family: "Raleway", sans-serif;
   color: #282f44;
   width: 65%;
   height: 30px;
@@ -146,6 +147,9 @@ body {
   right: 10px;
   font-size: 30px;
   cursor: pointer;
+}
+::placeholder {
+  text-align: center;
 }
 @keyframes fadeInAnimation {
   0% {
