--- a/CSS/nav.css
+++ b/CSS/nav.css
@@ -47,6 +47,7 @@ body {
   justify-content: space-between;
   width: 50px;
   height: 40px;
+  margin-top: 25px;
 }
 .toggleMenu .bar {
   height: 10px;
