--- a/CSS/register.css
+++ b/CSS/register.css
@@ -13,6 +13,13 @@
   background-color: #ececec;
   width: 100%;
 }
+.header {
+  font-family: "Orbitron", sans-serif;
+  color: #282f44;
+  text-align: center;
+  font-size: 40px;
+  margin-top: 50px;
+}
 .registerDiv {
   display: flex;
   flex-direction: column;
