--- a/CSS/pourLog.css
+++ b/CSS/pourLog.css
@@ -154,3 +154,60 @@
   width: 175px;
   height: 27px;
 }
+
+.userBrewz {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.brewDiv {
+  margin: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  align-items: center;
+  width: 100%;
+}
+.brewDiv h4 {
+  margin: 15px;
+}
+.brewDiv button {
+  font-family: “Orbitron”, sans-serif;
+  color: #282F44;
+  height: 30px;
+  border-radius: 5px;
+  border: 1px solid #E6AF2E;
+  background-color: #E6AF2E;
+}
+.brewDiv button:hover {
+  color: #E6AF2E;
+  background-color: #282F44;
+}
+.userBeerz {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.beerDiv {
+  margin: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  text-align: center;
+  align-items: center;
+  width: 100%;
+}
+.beerDiv h4 {
+  margin: 15px;
+}
+.beerDiv button {
+  font-family: “Orbitron”, sans-serif;
+  color: #282F44;
+  height: 30px;
+  border-radius: 5px;
+  border: 1px solid #E6AF2E;
+  background-color: #E6AF2E;
+}
+.beerDiv button:hover {
+  color: #E6AF2E;
+  background-color: #282F44;
+}
